src/test/deca/context/valid/custom/class/classA.deca
class A {
    protected int x ;
    int getX() {
        return x ;
    }
}

{
    A a = new A() ;
    a.setX(1) ;
    println("a.getX() = ", a.getX()) ;
}