src/test/deca/context/invalid/custom/while_wrong_type.deca
{
int i;
while("hello"){
i = 1;
}
}